Cleanup artifacts and deprecated methods (#8025)